# trcache

./: .clang-format  .clang-tidy  .editorconfig  CLAUDE.md  CMakeLists.txt  Makefile  PLAN.md  README.md  trcache.h
benchmark/: .gitignore  Makefile  benchmark.c  feed_only_benchmark  feed_only_benchmark.c  hdr_histogram.h  htap_benchmark  htap_benchmark.c  ingestion_benchmark.c  out  plot_results.py  result.csv  run_benchmarks.sh  run_feed_only_benchmarks.sh  static_read_benchmark  static_read_benchmark.c  test
src/concurrent/: Makefile  atomic_array.c  atomsnap.c  scalable_queue.c  spsc_page.h
src/core/: Makefile  candle_chunk.c  candle_chunk_index.c  candle_chunk_list.c  symbol_table.c  trade_data_buffer.c  trcache_candle_batch.c  trcache_internal.c
src/meta/: Makefile  symbol_table.c  trcache_candle_batch.c  trcache_internal.c
src/pipeline/: Makefile  candle_chunk.c  candle_chunk_index.c  candle_chunk_list.c  candle_update_ops.c  event_data_buffer.c  trade_data_buffer.c
src/sched/: Makefile  admin_thread.c  sched_msg.c  (+4 more)
tests/: .gitignore  Makefile  massif.out  test_candle_chunk_list_multithread.c  test_copy_backward_by_seq_error.c  test_memory_limit.c  test_symbol_table.c  test_trade_data_buffer.c  test_trade_data_buffer_free_list.c  test_trade_data_buffer_no_freelist.c  test_trcache_api_multi_symbol.c  test_trcache_api_multi_worker.c  test_trcache_api_multithread.c  test_trcache_api_single_worker.c  test_trcache_init_destroy.c  test_utils.c  xtmemory.kcg.991
validator/: .gitignore  Makefile  config.json  main.cpp  plot_comparison.py  plot_latency.py
(+82 files in other folders)
